# abwab-homework

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
config/: detection_config.pkl
notebooks/: dataset-selection-all-data.ipynb  em.py  ood-scoring.ipynb  outlier-detection-numerical-text-features.ipynb  outlier-detection-per-category.ipynb  outlier-detection-text-only.ipynb  result_em_bench_high_unsupervised_with0.9_factorized_with10000ocsvm_10_100_.txt
outlier_detection/: config.py  json_logger.py  logger.py  server_utils.py  utils.py
tests/: conftest.py  test_endpoint.py
