[tool.poetry]
name = "abwab_homework"
version = "0.1.0"
description = "Abwab Homework Project"
authors = ["Mouhaned Chebaane <moh.chebg56@gmail.com>"]


[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.poetry.dependencies]
python = "^3.11, <3.12"
scikit-learn = "^1.5.2"
fastapi = {extras = ["all"], version = "^0.110.0"}
pandas = "^2.2.2"
datasets = "^3.0.0"
pydantic = "^2.8.2"
pydantic-core = "^2.20.1"
annotated-types = ">=0.4.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
torch = [
    { version = "=2.1.0", source = "pypi", platform = "darwin" },
]
numpy = "^1.23.5"
transformers = "^4.44.2"
umap-learn = "^0.5.1"
pyarrow = "^17.0.0"
cleanlab = "^2.6.6"
hdbscan = "^0.8.38.post1"
sentence-transformers = "^3.1.1"
h11 = "^0.14.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
seaborn = "^0.12.0"
ipykernel = "6.29.3"
ipywidgets = "^7.7.0"
ipympl = "^0.9.4"
jupyterlab-widgets = "^3.0.13"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"